--- a/css/estilos.css
+++ b/css/estilos.css
@@ -163,6 +163,19 @@ background-image:url(../imgs/apache.png);
 	position: absolute;
 	background-image: url(../imgs/disparo.png);
 }
+/* explosão */
+#explosao1 {
+	width:15px;
+	height:87px;
+	position:absolute;
 
+}
+
+#explosao2 {
+	width:15px;
+	height:87px;
+	position:absolute;
+	
+}
 
 
